--- a/KD/Views/Shared/_leftMenu.cshtml
+++ b/KD/Views/Shared/_leftMenu.cshtml
@@ -33,7 +33,7 @@
 
             <span class="nav-head-menu-title">Settings</span>
 
-            <div href="/Products" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="" main-tooltip-menu>
+            <div href="/Categories" class="main-btn-menu-left-menu main_btn_menu_left_menu_js" main-color-ripple="#43494f80" id="active_menu_categories_js" main-tooltip-menu>
                 <span class="main-icon"><i class="ri-stack-line"></i></span>
                 <span class="main-title">Categories</span>
             </div>
