--- a/KD/Content/Main/_filterRecord.scss
+++ b/KD/Content/Main/_filterRecord.scss
@@ -34,7 +34,7 @@
 .main-select-record {
     position: relative;
     width: 60px;
-    height: 40px;
+    height: 32px;
     font-size: 11px;
     line-height: 11px;
     transition: all 0.25s ease-in-out;
@@ -61,7 +61,7 @@
         @keyframes show_wrapper_drop_down {
             0% {
                 opacity: 0;
-                transform: translateY(-20%);
+                transform: translateY(20%);
             }
 
             100% {
@@ -76,11 +76,12 @@
         padding: 0px 14px;
         width: 100%;
         height: 100%;
-        border-radius: 8px;
+        border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background: $main-background-by-primary;
+        border: 1px solid #F3F6F7;
+        // background: $main-background-by-primary;
 
         .text-record-display {
             height: 100%;
@@ -110,17 +111,18 @@
 
     .content-item-select {
         position: absolute;
-        top: 46px;
+        bottom: 38px;
         width: 100%;
         height: auto;
         background: $main-color-white;
+        border: 1px solid #F3F6F7;
         box-shadow: 2px 2px 10px #4b4d5405;
         padding: 6px 0px 6px 0px;
-        border-radius: 10px;
+        border-radius: 12px;
         display: flex;
         flex-direction: column;
         overflow: hidden;
-        transform: translateY(-20%);
+        transform: translateY(20%);
         z-index: -100;
         visibility: hidden;
         opacity: 0;
