--- a/KD/Content/Main/_mainLayOut.scss
+++ b/KD/Content/Main/_mainLayOut.scss
@@ -36,7 +36,7 @@ $color-border-scroll-500 : #a3a3a3;
     flex-direction: row;
     width: 100%;
     height: 100%;
-    background: $main-background;
+    background: #fff;
     color: var(--ocs-text-color);
     letter-spacing: 0px;
     font-size: 14px;
