--- a/KD/Content/Main/main.css
+++ b/KD/Content/Main/main.css
@@ -98,7 +98,7 @@
   flex-direction: row;
   width: 100%;
   height: 100%;
-  background: #fafafc;
+  background: #fff;
   color: var(--ocs-text-color);
   letter-spacing: 0px;
   font-size: 14px;
@@ -964,13 +964,12 @@
   top: 80px;
   z-index: 100;
   height: 56px;
-  margin: 0px 30px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   grid-gap: 6px;
   box-sizing: border-box;
-  background: #fafafc;
+  background: #fff;
 }
 .main-head-list-filter .left {
   display: flex;
@@ -985,15 +984,20 @@
 
 .main-container {
   position: relative;
-  min-height: calc(100vh - 70px);
+  min-height: 100vh;
   box-sizing: border-box;
   z-index: 99;
+  padding: 0px 25px;
+  background: #fff;
 }
 
 .main-container-view-list {
-  margin: 30px;
   margin-top: 0px;
-  height: calc(100% - 160px);
+  height: calc(100% - 210px);
+  border-radius: 14px;
+  border: 1px solid #F3F6F7;
+  padding: 4px 4px;
+  overflow: hidden;
 }
 @media (max-width: 500px) {
   .main-container-view-list {
@@ -1003,133 +1007,38 @@
 }
 
 .main-container-list-table {
-  overflow: hidden;
+  height: 100%;
+  padding: 0px 18px 21px 21px;
+}
+
+.main-scroll-view-list {
+  overflow-y: scroll;
+}
+.main-scroll-view-list::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.main-scroll-view-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  border: 1px solid #fff;
+  background-clip: padding-box;
+  -webkit-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+.main-scroll-view-list::-webkit-scrollbar-thumb:hover {
+  border: 0px solid #fff;
+}
+.main-scroll-view-list:hover::-webkit-scrollbar-thumb {
+  background: rgba(212, 216, 221, 0.568627451);
 }
 
 .table-responsive {
   overflow: hidden;
 }
 
-.btn-refresh-list {
-  width: 38px;
-  height: 35px;
-  min-width: 38px;
-  height: 35px;
-  border-radius: 10px;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #6d6d6d;
-  outline: none;
-  border: 1px solid #ced4da;
-}
-.btn-refresh-list i {
-  font-size: 13px;
-  line-height: 13px;
-  margin-left: 1px;
-}
-
-.main-btn-reload-again {
-  width: 42px;
-  height: 40px;
-  outline: none;
-  border: 0px solid #fff;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #f3f6f7;
-  color: #717171;
-}
-.main-btn-reload-again i {
-  font-size: 14px;
-  line-height: 14px;
-  pointer-events: none;
-}
-.main-btn-reload-again img {
-  height: 14px;
-}
-
-.nav-filter-search {
-  display: flex;
-  align-items: center;
-  width: 220px;
-  height: 40px;
-  padding: 0px 4px;
-  border: 0px solid transparent;
-  border-radius: 10px;
-  background: #f3f6f7;
-}
-@media (max-width: 500px) {
-  .nav-filter-search {
-    width: 140px;
-  }
-}
-.nav-filter-search .icon-search {
-  min-width: 40px;
-  width: 40px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15px;
-  line-height: 15px;
-  color: #717171;
-  transition: 0.3s ease-in-out;
-}
-.nav-filter-search.is-has-search {
-  color: #4aadcf;
-}
-.nav-filter-search .form-control-search::-moz-placeholder {
-  font-size: 12px;
-  color: #717171;
-  letter-spacing: 0.5px;
-}
-.nav-filter-search .form-control-search::placeholder {
-  font-size: 12px;
-  color: #717171;
-  letter-spacing: 0.5px;
-}
-.nav-filter-search .form-control-search {
-  height: 100%;
-  width: 100%;
-  font-size: 14px;
-  color: #6d6d6d;
-  outline: none;
-  border: 0px;
-  background: transparent;
-}
-.nav-filter-search .nav-btn-clear-search {
-  min-width: 40px;
-  width: 40px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #a3a3a3;
-  transform: scale(0);
-  opacity: 0;
-  transition: 0.3s ease-in-out;
-}
-.nav-filter-search .nav-btn-clear-search .main-btn-clear-search {
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  font-size: 13px;
-  line-height: 13px;
-  color: #8e8e8e;
-}
-.nav-filter-search .nav-btn-clear-search .main-btn-clear-search i {
-  margin-left: 0.5px;
-}
-
 .main-nav-footer-view-list {
-  height: 80px;
-  min-height: 80px;
+  height: 68px;
+  min-height: 68px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1514,7 +1423,7 @@
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  background-color: #fbfcfd;
+  background-color: #fff;
 }
 @media (max-width: 500px) {
   .main-top-head-container {
@@ -1932,9 +1841,9 @@ button:focus {
 
 .a-t-btn {
   outline: none;
-  height: 28px;
-  width: 28px;
-  border-radius: 8px;
+  height: 27px;
+  width: 27px;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1950,20 +1859,20 @@ button:focus {
   height: 11px;
 }
 .a-t-btn.color-view {
-  background: rgba(0, 188, 212, 0.0509803922);
-  color: #00bcd4;
+  background: #03A9F4;
+  color: #fff;
 }
 .a-t-btn.color-view img {
   height: 12px;
   width: 11px;
 }
 .a-t-btn.color-update {
-  background: rgba(139, 195, 75, 0.0784313725);
-  color: #8BC34A;
+  background: #03F4C6;
+  color: #fff;
 }
 .a-t-btn.color-delete {
-  background: rgba(255, 116, 116, 0.0784313725);
-  color: #FF7474;
+  background: #FF7474;
+  color: #fff;
 }
 
 button.a-b-t-btn.color-blue {
@@ -2006,7 +1915,7 @@ button.a-b-t-btn i {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
   outline: none !important;
   border: none;
@@ -2039,7 +1948,8 @@ button.a-b-t-btn i {
 }
 .main-btn-action i {
   font-size: 14px;
-  line-height: 13px;
+  line-height: 14px;
+  margin-right: 1px;
 }
 .main-btn-action i.icon-bold {
   font-weight: bold;
@@ -2625,7 +2535,7 @@ button.a-b-t-btn i {
 .main-select-record {
   position: relative;
   width: 60px;
-  height: 40px;
+  height: 32px;
   font-size: 11px;
   line-height: 11px;
   transition: all 0.25s ease-in-out;
@@ -2644,7 +2554,7 @@ button.a-b-t-btn i {
 @keyframes show_wrapper_drop_down {
   0% {
     opacity: 0;
-    transform: translateY(-20%);
+    transform: translateY(20%);
   }
   100% {
     opacity: 1;
@@ -2655,11 +2565,11 @@ button.a-b-t-btn i {
   padding: 0px 14px;
   width: 100%;
   height: 100%;
-  border-radius: 8px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f3f6f7;
+  border: 1px solid #F3F6F7;
 }
 .main-select-record .btn-record-display .text-record-display {
   height: 100%;
@@ -2688,17 +2598,18 @@ button.a-b-t-btn i {
 }
 .main-select-record .content-item-select {
   position: absolute;
-  top: 46px;
+  bottom: 38px;
   width: 100%;
   height: auto;
   background: #fff;
+  border: 1px solid #F3F6F7;
   box-shadow: 2px 2px 10px rgba(75, 77, 84, 0.0196078431);
   padding: 6px 0px 6px 0px;
-  border-radius: 10px;
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  transform: translateY(-20%);
+  transform: translateY(20%);
   z-index: -100;
   visibility: hidden;
   opacity: 0;
@@ -2723,6 +2634,139 @@ button.a-b-t-btn i {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.btn-refresh-list {
+  width: 38px;
+  height: 35px;
+  min-width: 38px;
+  height: 35px;
+  border-radius: 10px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #6d6d6d;
+  outline: none;
+  border: 1px solid #ced4da;
+}
+.btn-refresh-list i {
+  font-size: 13px;
+  line-height: 13px;
+  margin-left: 1px;
+}
+
+.main-btn-reload-again {
+  width: 42px;
+  height: 40px;
+  outline: none;
+  border: 0px solid #fff;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f3f6f7;
+  color: #717171;
+}
+.main-btn-reload-again i {
+  font-size: 14px;
+  line-height: 14px;
+  pointer-events: none;
+}
+.main-btn-reload-again img {
+  height: 14px;
+}
+
+.nav-filter-search {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  height: 38px;
+  min-height: 38px;
+  padding: 0px 4px;
+  border: 0px solid transparent;
+  border-radius: 10px;
+  border: 1px solid #F3F6F7;
+}
+@media (max-width: 500px) {
+  .nav-filter-search {
+    width: 140px;
+  }
+}
+.nav-filter-search .icon-search {
+  min-width: 40px;
+  width: 40px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 14px;
+  color: #717171;
+  transition: 0.3s ease-in-out;
+}
+.nav-filter-search.is-has-search {
+  color: #4aadcf;
+}
+.nav-filter-search .form-control-search::-moz-placeholder {
+  font-size: 12px;
+  color: #717171;
+  letter-spacing: 0.5px;
+}
+.nav-filter-search .form-control-search::placeholder {
+  font-size: 12px;
+  color: #717171;
+  letter-spacing: 0.5px;
+}
+.nav-filter-search .form-control-search {
+  height: 100%;
+  width: 100%;
+  font-size: 14px;
+  color: #6d6d6d;
+  outline: none;
+  border: 0px;
+  background: transparent;
+}
+.nav-filter-search .nav-btn-clear-search {
+  min-width: 40px;
+  width: 40px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #a3a3a3;
+  transform: scale(0);
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+}
+.nav-filter-search .nav-btn-clear-search .main-btn-clear-search {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 13px;
+  line-height: 13px;
+  color: #8e8e8e;
+}
+.nav-filter-search .nav-btn-clear-search .main-btn-clear-search i {
+  margin-left: 0.5px;
+}
+.nav-filter-search .main-btn-dialog-filter {
+  min-width: 32px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #a3a3a3;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+.nav-filter-search .main-btn-dialog-filter img {
+  height: 14px;
 }
 
 .nav-filter-chip {
@@ -2932,9 +2976,9 @@ button.a-b-t-btn i {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 12px;
   color: #717171;
-  background: #f3f6f7;
+  border: 1px solid #F3F6F7;
   font-size: 11px;
   line-height: 10px;
   transition: all 0.15s ease-in-out;
@@ -2952,6 +2996,7 @@ button.a-b-t-btn i {
 }
 .main-nav-pagination .main-btn-page.active {
   background: #4aadcf;
+  border: 1px solid #4aadcf;
   color: #fff;
   pointer-events: none;
 }
