--- a/KD/Content/Plugins/DataTablesCustom/TableCustom.css
+++ b/KD/Content/Plugins/DataTablesCustom/TableCustom.css
@@ -536,7 +536,7 @@ a.dt-button:hover {
 }
 
 .dataTables_wrapper table.table>thead>tr>th {
-    padding: 2px 25px 0px 2px !important;
+    padding: 0px 25px 0px 6px !important;
     white-space: nowrap;
     border-top-width: 0px;
     border-top-style: solid;
@@ -545,6 +545,9 @@ a.dt-button:hover {
     border-bottom-style: solid !important;
     border-bottom-color: #f3f3f3 !important;
 }
+.dataTables_wrapper table.table>thead>tr>th:first-child{
+    padding: 0px 25px 0px 0px !important;
+}
 
 .dataTables_wrapper table.table>thead>tr>th>.nav-th-text {
     display: flex;
@@ -552,7 +555,7 @@ a.dt-button:hover {
 }
 
 .dataTables_wrapper table.table>thead>tr>th:last-child {
-    padding: 2px 0px 0px 2px !important;
+    padding: 0px 0px 0px 6px !important;
 }
 
 .table>caption+thead>tr:first-child>th,
@@ -593,6 +596,15 @@ a.dt-button:hover {
 .table>tbody>tr>td:last-child,
 .table>tfoot>tr>td:last-child {
     padding: 8px 2px 8px 2px;
+}
+
+.table>thead>tr>th:first-child,
+.table>tbody>tr>th:first-child,
+.table>tfoot>tr>th:first-child,
+.table>thead>tr>td:first-child,
+.table>tbody>tr>td:first-child,
+.table>tfoot>tr>td:first-child {
+    padding: 8px 2px 8px 0px;
 }
 
 table.dataTable thead .sorting:after,
