--- a/KD/Views/Products/Index.cshtml
+++ b/KD/Views/Products/Index.cshtml
@@ -41,8 +41,9 @@
         <div class="left">
             <div class="nav-filter-search" id="btn_main_search">
                 <div class="main_max_screen_cursor_pointer icon-search main-tooltip" title="ស្វែងរក"><i class="ri-search-2-line"></i></div>
-                <input type="text" class="form-control-search" placeholder="ស្វែងរក" />@*<div class="nav-btn-clear-search main-tooltip" title="លុប"><div class="main_max_screen_cursor_pointer main-btn-clear-search"><i class="ri-close-fill"></i></div></div>*@
-                <div class="main-btn-dialog-filter main_action_ripple" main-color-ripple="#f3f6f77a"><img src="~/Content/Assets/icon/filter.png" /></div>
+                <input type="text" class="form-control-search" placeholder="ស្វែងរក" />
+                @*<div class="nav-btn-clear-search main-tooltip" title="លុប"><div class="main_max_screen_cursor_pointer main-btn-clear-search"><i class="ri-close-fill"></i></div></div>*@
+                <div class="main-btn-dialog-filter main_action_ripple main-tooltip" title="ច្រោះរក" main-color-ripple="#f3f6f77a"><img src="~/Content/Assets/icon/filter.png" /></div>
             </div>
         </div>
         <div class="right"><button class="main-btn-action only-icon-500 main_action_ripple blue" main-color-ripple="#ffffff3b" id="btn_add_new"><i class="ri-add-circle-line"></i><div class="title-button" ocs-data-tag="btn_add">បង្កើត</div></button></div>
