--- a/KD/Views/Products/Index.cshtml
+++ b/KD/Views/Products/Index.cshtml
@@ -46,6 +46,7 @@
                 <div class="main-btn-dialog-filter main_action_ripple main-tooltip" title="ច្រោះរក" main-color-ripple="#f3f6f77a"><img src="~/Content/Assets/icon/filter.png" /></div>
             </div>
         </div>
+        sdfd
         <div class="right"><button class="main-btn-action only-icon-500 main_action_ripple blue" main-color-ripple="#ffffff3b" id="btn_add_new"><i class="ri-add-circle-line"></i><div class="title-button" ocs-data-tag="btn_add">បង្កើត</div></button></div>
         @*<div class="left">
                 <div class="nav-filter-record">
