has been add folder product and categories script

--- a/KD/Content/Main/_buttons.scss
+++ b/KD/Content/Main/_buttons.scss
@@ -107,7 +107,7 @@ button:focus {
 
     &.color-update {
         // border: 1px solid #8bc34b1a;
-        background: #03F4C6;
+        background: #09e1b8;
         color: #fff;
     }
 
