--- a/KD/Content/Main/Login/Login.css
+++ b/KD/Content/Main/Login/Login.css
@@ -2,12 +2,10 @@
   font-family: "km";
   src: url("/Content/Fonts/Content/Content-Regular.ttf");
 }
-
 @font-face {
   font-family: "en";
   src: url("/Content/Fonts/Montserrat/Montserrat-Regular.ttf");
 }
-
 :root {
   --font: "en", "km", -apple-system, sans-serif;
 }
@@ -15,8 +13,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: var(--font);
 }
 
@@ -25,25 +22,15 @@
   width: 100vw;
   overflow: hidden;
   background: #235567;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   letter-spacing: 0px;
 }
-
 .main-login-wrapper .main-login-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   grid-gap: 0px 130px;
   background: #fff;
@@ -51,9 +38,7 @@
   border-radius: 25px;
   position: relative;
 }
-
 .main-login-wrapper .main-login-content .main-login-translate {
-  -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
   position: absolute;
   top: 35px;
@@ -64,144 +49,86 @@
   border: 2px solid #f2f2f2;
   cursor: pointer;
 }
-
 .main-login-wrapper .main-login-content .main-login-translate:hover {
   border: 2px solid #99cfe0;
 }
-
 .main-login-wrapper .main-login-content .main-login-translate img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   padding: 2px;
-  -webkit-transition: 0.15s ease-in-out;
   transition: 0.15s ease-in-out;
 }
-
 .main-login-wrapper .main-login-content .main-login-translate:active img {
-  -webkit-transform: scale(0.5);
-          transform: scale(0.5);
+  transform: scale(0.5);
 }
-
 .main-login-wrapper .main-login-content .main-login-left {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
 .main-login-wrapper .main-login-content .main-login-left .title {
   text-align: center;
   color: #189c9b;
   font-size: 16px;
   font-weight: 400;
 }
-
 .main-login-wrapper .main-login-content .main-login-left .image-login {
   pointer-events: none;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
-
 .main-login-wrapper .main-login-content .main-login-left .image-login img {
   height: 500px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right {
   width: 222px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .header .logo {
   height: 80px;
   width: 80px;
-  border: 2px solid #f2f2f26b;
+  border: 2px solid rgba(242, 242, 242, 0.4196078431);
   border-radius: 50%;
   padding: 14px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .header .logo img {
   height: 100%;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .header .title {
   font-size: 20px;
   font-weight: 700;
   margin-top: 16px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-top: 30px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   grid-gap: 4px 0px;
   margin-bottom: 12px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group label {
   font-size: 12px;
   color: #707070;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth {
   width: 100%;
   height: 45px;
@@ -212,127 +139,81 @@
   font-size: 13px;
   line-height: 13px;
   color: #161616;
-  -webkit-transition: 0.15s ease-in-out;
   transition: 0.15s ease-in-out;
 }
-
-.main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth::-webkit-input-placeholder {
+.main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth::-moz-placeholder {
   font-size: 12px;
   line-height: 12px;
 }
-
-.main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth:-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 12px;
-}
-
-.main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth::-ms-input-placeholder {
-  font-size: 12px;
-  line-height: 12px;
-}
-
 .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth::placeholder {
   font-size: 12px;
   line-height: 12px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth:focus {
-  border: 1px solid #4aaecf83;
+  border: 1px solid rgba(74, 174, 207, 0.5137254902);
 }
-
 @media only screen and (max-width: 720px) {
   .main-login-wrapper .main-login-content .main-login-right .body .main-login-form-group .form-control-auth {
     height: 50px;
   }
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon {
   position: relative;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password {
   position: absolute;
   width: 45px;
   height: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   top: 0px;
   right: 2px;
   cursor: pointer;
   font-size: 14px;
   color: #7f818f;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password .ocs-btn-show-password {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: 0.25s ease-in-out;
+  align-items: center;
+  justify-content: center;
   transition: 0.25s ease-in-out;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password .ocs-btn-show-password i {
-  -webkit-animation: show_icon_show_password 0.5s ease-in-out;
-          animation: show_icon_show_password 0.5s ease-in-out;
+  animation: show_icon_show_password 0.5s ease-in-out;
   pointer-events: none;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password .ocs-btn-show-password:hover {
-  background: #444a4c0d;
+  background: rgba(68, 74, 76, 0.0509803922);
 }
-
 .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password .ocs-btn-show-password:active {
-  -webkit-transition: 0.1s ease-in-out;
   transition: 0.1s ease-in-out;
-  -webkit-transform: scale(0.8);
-          transform: scale(0.8);
+  transform: scale(0.8);
 }
-
 @media only screen and (max-width: 720px) {
   .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password .ocs-btn-show-password {
     width: 40px;
     height: 40px;
   }
 }
-
 @media only screen and (max-width: 720px) {
   .main-login-wrapper .main-login-content .main-login-right .body .input-with-icon .icon-show-password {
     width: 50px;
     height: 50px;
   }
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer span {
   color: #676767;
   font-size: 13px;
   margin-right: 6px;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer .btn-outline {
   all: unset;
   border-radius: 5px;
@@ -340,41 +221,24 @@
   padding: 0 16px;
   font-size: 13px;
   cursor: pointer;
-  -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer .btn-outline:hover {
   background: #f1f1f1;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer .btn-outline.auth-btn-login:focus {
-  -webkit-box-shadow: 0 0 0 3px #00bcd4c7;
-          box-shadow: 0 0 0 3px #00bcd4c7;
+  box-shadow: 0 0 0 3px rgba(0, 188, 212, 0.7803921569);
 }
-
 .main-login-wrapper .main-login-content .main-login-right .n-auth-footer .btn-outline.auth-btn-register:focus {
-  -webkit-box-shadow: 0 0 0 3px #ffc107ab;
-          box-shadow: 0 0 0 3px #ffc107ab;
+  box-shadow: 0 0 0 3px rgba(255, 193, 7, 0.6705882353);
 }
-
 .main-login-wrapper .main-login-content .main-login-right .auth-btn {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin-top: 20px;
   text-transform: uppercase;
   height: 48px;
@@ -383,37 +247,28 @@
   border: 0px;
   font-size: 13px;
   line-height: 13px;
-  -webkit-transition: 0.15s ease-in-out;
   transition: 0.15s ease-in-out;
   color: #fff;
   background: #4aadcf;
   cursor: pointer;
 }
-
 @media only screen and (max-width: 720px) {
   .main-login-wrapper .main-login-content .main-login-right .auth-btn {
     height: 50px;
   }
 }
-
 .main-login-wrapper .main-login-content .main-login-right .auth-btn.auth-btn-register:active {
-  -webkit-box-shadow: 0 0 0 3px #d7b952b8 !important;
-          box-shadow: 0 0 0 3px #d7b952b8 !important;
+  box-shadow: 0 0 0 3px rgba(215, 185, 82, 0.7215686275) !important;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .auth-btn.auth-btn-register:focus {
-  -webkit-box-shadow: 0 0 0 3px #d7b952b8 !important;
-          box-shadow: 0 0 0 3px #d7b952b8 !important;
+  box-shadow: 0 0 0 3px rgba(215, 185, 82, 0.7215686275) !important;
 }
-
 .main-login-wrapper .main-login-content .main-login-right .auth-btn:hover {
   opacity: 0.9;
 }
-
 .main-login-wrapper .main-position-translate-langauge-screen-mobile {
   display: none;
 }
-
 .main-login-wrapper .auth-forgot-pasword {
   outline: none;
   border: 0px;
@@ -422,10 +277,8 @@
   font-size: 12px;
   margin-top: 14px;
   cursor: pointer;
-  -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
-
 .main-login-wrapper .auth-forgot-pasword:hover {
   color: #4aadcf;
 }
@@ -440,15 +293,9 @@
 
 .loader-login {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 28px;
   height: 44px;
 }
@@ -459,97 +306,50 @@
   height: 6px;
   border-radius: 50%;
   background: #fff;
-  -webkit-animation-timing-function: cubic-bezier(0, 1, 1, 0);
-          animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
 .loader-login div:nth-child(1) {
   left: 3px;
-  -webkit-animation: loader-login1 0.6s infinite;
-          animation: loader-login1 0.6s infinite;
+  animation: loader-login1 0.6s infinite;
 }
 
 .loader-login div:nth-child(2) {
   left: 3px;
-  -webkit-animation: loader-login2 0.6s infinite;
-          animation: loader-login2 0.6s infinite;
+  animation: loader-login2 0.6s infinite;
 }
 
 .loader-login div:nth-child(3) {
   left: 12px;
-  -webkit-animation: loader-login2 0.6s infinite;
-          animation: loader-login2 0.6s infinite;
+  animation: loader-login2 0.6s infinite;
 }
 
 .loader-login div:nth-child(4) {
   left: 21px;
-  -webkit-animation: loader-login3 0.6s infinite;
-          animation: loader-login3 0.6s infinite;
-}
-
-@-webkit-keyframes loader-login1 {
-  0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
+  animation: loader-login3 0.6s infinite;
 }
 
 @keyframes loader-login1 {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
   }
   100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
-
-@-webkit-keyframes loader-login3 {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-}
-
 @keyframes loader-login3 {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
+    transform: scale(0);
   }
 }
-
-@-webkit-keyframes loader-login2 {
-  0% {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
-  }
-  100% {
-    -webkit-transform: translate(9px, 0);
-            transform: translate(9px, 0);
-  }
-}
-
 @keyframes loader-login2 {
   0% {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0);
+    transform: translate(0, 0);
   }
   100% {
-    -webkit-transform: translate(9px, 0);
-            transform: translate(9px, 0);
+    transform: translate(9px, 0);
   }
-}
-/*# sourceMappingURL=Login.css.map */
+}/*# sourceMappingURL=Login.css.map */
