--- a/KD/Views/Products/Index.cshtml
+++ b/KD/Views/Products/Index.cshtml
@@ -46,41 +46,7 @@
                 <div class="main-btn-dialog-filter main_action_ripple main-tooltip" title="ច្រោះរក" main-color-ripple="#f3f6f77a"><img src="~/Content/Assets/icon/filter.png" /></div>
             </div>
         </div>
-        sdfd
         <div class="right"><button class="main-btn-action only-icon-500 main_action_ripple blue" main-color-ripple="#ffffff3b" id="btn_add_new"><i class="ri-add-circle-line"></i><div class="title-button" ocs-data-tag="btn_add">បង្កើត</div></button></div>
-        @*<div class="left">
-                <div class="nav-filter-record">
-                    <div class="main-select-record" id="list_filter_record">
-                        <div class="main_max_screen_cursor_pointer btn-record-display main_action_ripple" main-color-ripple="#ffffff3b">
-                            <div class="text-record-display">10</div>
-                            <span class="icon"><i class="ri-arrow-down-s-line"></i></span>
-                        </div>
-                        <div class="main_max_screen_cursor_pointer content-item-select">
-                            <span class="item">10</span>
-                            <span class="item">20</span>
-                            <span class="item">50</span>
-                            <span class="item">100</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="nav-filter-chip">
-                    <button class="main_max_screen_cursor_pointer main-tooltip btn-filter-chip main_action_ripple" main-color-ripple="#ffffff3b" title="ច្រោះរក" id="btn_filter_chip">
-                        <img src="~/Content/Assets/icon/filter.png" />
-                    </button>
-                    <div class="nav-dialog-filter-chip" style="width:250px;">
-                        <div class="nav-head">
-                            <div class="left"><div class="text">ច្រោះរក</div></div>
-                        </div>
-                        <div class="nav-content-chip" style="height:60px;">
-                        </div>
-                        <div class="nav-footer">
-                            <div class="main_action_ripple btn-close-dialog-chip">បិទ</div>
-                            <div class="main_action_ripple btn-apply-dialog-chip" main-color-ripple="#ffffff3b">អនុវត្ត</div>
-                        </div>
-                    </div>
-                </div>
-            </div>*@
-
     </div>
 
     <div class="main-container-view-list">
@@ -90,6 +56,7 @@
                     <thead>
                         <tr>
                             <th>ឈ្មោះ</th>
+                            <th class="min-width">ស្ថានភាព</th>
                             <th class="min-width" ocs-data-tag="user_create">អ្នកបង្កើត</th>
                             <th class="min-width" ocs-data-tag="date_create">ថ្ងៃបង្កើត</th>
                             <th class="min-width" ocs-data-tag="user_update">អ្នកកែប្រែ</th>
@@ -156,7 +123,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Content/Plugins/DataTables/datatables.js"></script>
     <script src="~/Content/Main/Component/drop-list.js"></script>
-    <script src="~/Scripts/Views/KD/controlller.js" type="module"></script>
+    <script src="~/Scripts/Views/Products/controlller.js" type="module"></script>
     <script>
         $(document).ready(function () {
             $("#active_menu_product_js").mainActiveMenu();
